--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -12,10 +12,10 @@ body {
   background-color: yellow;
 } */
 
-/* .row {
+.row {
   border: 3px dashed blue;
   text-align: center;
-} */
+}
 /* 
 .col {
   border: 3px dotted orange;
