--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -7,15 +7,17 @@ body {
   min-height: 100vh;
 }
 
-/* .container {
-  border: 3px solid black;
-  background-color: yellow;
-} */
+.container {
+  /* border: 3px solid black; */
+  /* background-color: yellow; */
+  height: 25rem;
+  /* width: 100rem; */
+} 
 
-.row {
+/* .row {
   border: 3px dashed blue;
   text-align: center;
-}
+} */
 /* 
 .col {
   border: 3px dotted orange;
